# seer2-next-message

./: .env  .gitignore  Cargo.toml  README.md
demo/: Cargo.toml
demo/src/: client.rs  lib.rs  main.rs  print.rs  utils.rs
src/: error.rs  lib.rs  main.rs
src/entity/: fight.rs  item.rs  login.rs  mod.rs  notify.rs  pet.rs  quest.rs  team.rs  user.rs  vip.rs
src/message/: command.rs  encrypt.rs  error.rs  message.rs  message_data.rs  mod.rs  parser.rs  serde_bytes.rs
src/net/: connection.rs  frame.rs  mod.rs
src/utils/: c_string.rs  hex_bytes.rs  mod.rs  n_bytes.rs  null_terminated_str.rs  utf_string.rs
