[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
serde = { version = "1.0.188", features = ["derive"] }
paste = "1.0.14"
tokio = { version = "1.32.0", features = ["full"] }
once_cell = "1.18.0"
log = { version = "0.4.20", features = [] }
fern = "0.6.2"
chrono = "0.4.31"
hex = "0.4.3"
dotenv = "0.15.0"