[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

paste = "1.0.15"

once_cell = "1.19.0"
bytes = "1.7.1"

tokio = { version = "1.40.0", features = ["full"] }

log = "0.4.22"
fern = "0.6.2"

dotenv = "0.15.0"
chrono = "0.4.38"
hex = "0.4.3"
md5 = "0.7.0"