[package]
name = "message"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-util = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }

bytes = { workspace = true }
hex = { workspace = true }

paste = "1.0.15"

[workspace]
resolver = "2"
members = [".", "demo"]

[workspace.dependencies]
message = { path = "." }

bytes = "1.11.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["full"] }
hex = "0.4.3"
once_cell = "1.19.0"