[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
chrono = "0.4.38"

md5 = "0.7.0"

message = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
futures = "0.3.32"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
once_cell = "1.19.0"
