[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
chrono = "0.4.38"

md5 = "0.7.0"

message = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["full"] }
tokio-socks = { workspace = true }
futures = "0.3.32"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"
once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
paste = { version = "1" }

sea-orm = { version = "2.0.0-rc.37", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "schema-sync",
    "entity-registry"
] }

